user-order-aggregation-service/user-order-aggregation-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-order-aggregation-service
  name: user-order-aggregation-service
  namespace: default
spec:
  type: NodePort
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8080
    protocal: TCP
  selector:
    app: user-order-aggregation-service
  sessionAffinity: None
