user-order-aggregation-service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /orderdetails/*
        backend:
          serviceName: user-order-aggregation-service
          servicePort: 8000
